--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,6 @@ p {
   font-size: 18px;
   line-height: 1.6;
   margin-bottom: 48px;
-  margin-right: 48px;
 }
 
 link,
@@ -97,9 +96,10 @@ a {
   background-color: #fce0cf;
 }
 
-.container-inner {
+/* .container-inner {
   width: 50%;
-}
+  padding: auto;
+} */
 
 .space {
   padding: 48px;
@@ -145,6 +145,10 @@ img {
 
 .padding-card {
   padding-left: 20px;
+}
+
+.padding-card h3 {
+  margin-bottom: 0;
 }
 
 footer {
